# rpai

./: .env.example  .gitignore  README.md  pyproject.toml
cli/: __init__.py  doctor.py  main.py  project_validator.py
core/: config.py
core/ingestion/: __init__.py  discovery.py  local_repo.py  models.py  reader.py
docs/: architecture.md
doctor/: __init__.py  environment.py  project.py
instruction_templates/: __init__.py
preferences/: engineering-preferences.yaml
projects/: cellular-automata.yaml  example.yaml
prompts/: __init__.py
retrieval/: __init__.py  router.py
retrieval/adapters/: __init__.py  github.py  github_adapter.py  local.py  local_adapter.py
tests/: test_config.py  test_doctor.py  test_ingestion.py
tests/fixtures/sample_repo/: root.txt
tools/: __init__.py
workflows/: __init__.py  implementation_plan.py  issue_decomposition.py  registry.py
