[project]
name = "rpai"
version = "0.1.0"
description = "An opinionated agentic software engineering workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index",
    "chromadb",
    "langgraph",
    "pyyaml"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rpai = "cli.main:main"

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.hatch.build.targets.wheel]
packages = [
    "cli",
    "workflows",
    "retrieval",
    "tools",
    "instruction_templates"
]
